# agentic-taskops-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile3  License  README.md  alembic.ini  docker-entrypoint.sh  progress.md  pyproject.toml
app/: database.py  main.py
app/core/: dependencies.py  security.py
app/models/: __init__.py  task.py  user.py
app/routers/: agent.py  auth.py  tasks.py
app/services/: task_service.py  user_service.py
config/: settings.py
migrations/: env.py
migrations/versions/: 0123456789ab_initial_migration.py  a263cbda0236_create_taskstatus_enum_and_alter_task_.py
